--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sriram Narayanan - Resume</title>
     <style>
         :root {
-            --primary-color: #0078D4;
+            --primary-color: #0773c5;
             --background-color: #f4f4f9;
             --text-color: #333;
             --card-background: #fff;
@@ -52,12 +52,12 @@
         }
 
         .pdf-container {
-            margin: 20px 0;
+            margin: 10px 0;
         }
 
         .pdf-container iframe {
-            width: 125%;
-            height: 800px;
+            width: 100%;
+            height: 1000px;
             border: none;
             border-radius: 8px;
         }
