--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sriram Narayanan</title>
+    <title>Sriram Narayanan - Resume</title>
     <style>
         :root {
-            --primary-color: #0773c5;
+            --primary-color: #005392;
             --background-color: #f4f4f9;
             --text-color: #333;
             --card-background: #fff;
-            --shadow-color: rgba(0, 0, 0, 0.1);
+            --shadow-color: rgba(0, 0, 0, 0.027);
         }
 
         * {
@@ -21,7 +21,8 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background-color: var(--background-color);
+            background: url('bg1.jpg') no-repeat center center fixed;
+            background-size: cover;
             color: var(--text-color);
             line-height: 1.6;
         }
@@ -32,7 +33,7 @@
             padding: 20px;
             text-align: center;
         }
-
+        
         header h1 {
             font-size: 2.5rem;
         }
